[package]
name = "skiplist"
version = "0.4.0"
authors = ["JP-Ellis <josh@jpellis.me>"]
description = "Skiplist implementation in rust, providing fast insertion and removal.  A normal skiplist is implemented, as well as an ordered skiplist and a skipmap."
keywords = ["collection", "skiplist", "sorted"]

documentation = "https://docs.rs/skiplist"
homepage = "https://www.jpellis.me/projects/rust-skiplist/"
repository = "https://www.github.com/JP-Ellis/rust-skiplist/"

readme = "README.md"

license = "MIT"
edition = "2018"

[badges]
codecov = { repository = "JP-Ellis/rust-skiplist", branch = "master", service = "github" }

[dependencies]
rand = {version = "0.8", features = ["small_rng"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
blake2b_simd = { version = "0.5", default-features = false }
primitive-types = { version = "0.9", default-features = false, features = ["serde_no_std", "byteorder"] }
chain-merkle-trie = { path = "../chain/chain-merkle-trie"}
chain-common = {path = "../chain/chain-common"}

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "main"
harness = false
